test/tests/errors/error-assign-const.sm
// true
// false
/**/
/**/

program {
    const x = 1;
    x = 1;
}